==> cwl0127/arduino_core_stm32_w25qxx/lib/W25QXX/w25qxx.cpp <==
#include "w25qxx.h"
#include <Arduino.h>
#include <SPI.h>
#define W25QXX_DUMMY_BYTE         0xA5

uint32_t W25QXX_ReadID(void)
{
	uint32_t Temp = 0, Temp0 = 0, Temp1 = 0, Temp2 = 0;

    digitalWrite(W25QXX_CS_PIN, LOW);
    spi3.transfer(0x9F);
    Temp0 = spi3.transfer(0xA5);
    Temp1 = spi3.transfer(0xA5);
    Temp2 = spi3.transfer(0xA5);
    digitalWrite(W25QXX_CS_PIN, HIGH);
    Temp = (Temp0 << 16) | (Temp1 << 8) | Temp2;
    
    return Temp;
}

void W25qxx_ReadUniqID(void)
{
  digitalWrite(W25QXX_CS_PIN, LOW);
  spi3.transfer(0x4B);
	for(uint8_t	i=0;i<4;i++)
		spi3.transfer(W25QXX_DUMMY_BYTE);
	for(uint8_t	i=0;i<8;i++)
		w25qxx.UniqID[i] = spi3.transfer(W25QXX_DUMMY_BYTE);
  digitalWrite(W25QXX_CS_PIN, HIGH);
}

bool W25QXX_Init(void)
{ 
	pinMode(W25QXX_CS_PIN, OUTPUT);
	digitalWrite(W25QXX_CS_PIN, HIGH);
	spi3.beginTransaction(spiSetting);
    delay(100);
    
    uint32_t	id;
    
    id=W25QXX_ReadID();
    switch(id & 0x000000FF)
  {
		case 0x20:	// 	w25q512
			w25qxx.ID=W25Q512;
			w25qxx.BlockCount=1024;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q512\r\n");
			#endif
		break;
		case 0x19:	// 	w25q256
			w25qxx.ID=W25Q256;
			w25qxx.BlockCount=512;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q256\r\n");
			#endif
		break;
		case 0x18:	// 	w25q128
			w25qxx.ID=W25Q128;
			w25qxx.BlockCount=256;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q128\r\n");
			#endif
		break;
		case 0x17:	//	w25q64
			w25qxx.ID=W25Q64;
			w25qxx.BlockCount=128;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q64\r\n");
			#endif
		break;
		case 0x16:	//	w25q32
			w25qxx.ID=W25Q32;
			w25qxx.BlockCount=64;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q32\r\n");
			#endif
		break;
		case 0x15:	//	w25q16
			w25qxx.ID=W25Q16;
			w25qxx.BlockCount=32;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q16\r\n");
			#endif
		break;
		case 0x14:	//	w25q80
			w25qxx.ID=W25Q80;
			w25qxx.BlockCount=16;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q80\r\n");
			#endif
		break;
		case 0x13:	//	w25q40
			w25qxx.ID=W25Q40;
			w25qxx.BlockCount=8;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q40\r\n");
			#endif
		break;
		case 0x12:	//	w25q20
			w25qxx.ID=W25Q20;
			w25qxx.BlockCount=4;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q20\r\n");
			#endif
		break;
		case 0x11:	//	w25q10
			w25qxx.ID=W25Q10;
			w25qxx.BlockCount=2;
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Chip: w25q10\r\n");
			#endif
		break;
		default:
			#if (_W25QXX_DEBUG==1)
			Serial.printf("w25qxx Unknown ID\r\n");
			#endif	
			return false;
				
	}		
	w25qxx.PageSize=256;
	w25qxx.SectorSize=0x1000;
	w25qxx.SectorCount=w25qxx.BlockCount*16;
	w25qxx.PageCount=(w25qxx.SectorCount*w25qxx.SectorSize)/w25qxx.PageSize;
	w25qxx.BlockSize=w25qxx.SectorSize*16;
	w25qxx.CapacityInKiloByte=(w25qxx.SectorCount*w25qxx.SectorSize)/1024;
    W25qxx_ReadUniqID();
	W25QXX_ReadSR(1);
	W25QXX_ReadSR(2);
	W25QXX_ReadSR(3);
	#if (_W25QXX_DEBUG==1)
	Serial.printf("w25qxx Page Size: %d Bytes\r\n",w25qxx.PageSize);
	Serial.printf("w25qxx Page Count: %d\r\n",w25qxx.PageCount);
	Serial.printf("w25qxx Sector Size: %d Bytes\r\n",w25qxx.SectorSize);
	Serial.printf("w25qxx Sector Count: %d\r\n",w25qxx.SectorCount);
	Serial.printf("w25qxx Block Size: %d Bytes\r\n",w25qxx.BlockSize);
	Serial.printf("w25qxx Block Count: %d\r\n",w25qxx.BlockCount);
	Serial.printf("w25qxx Capacity: %d KiloBytes\r\n",w25qxx.CapacityInKiloByte);
	Serial.printf("w25qxx Init Done\r\n");
	#endif

	return true;
}

uint8_t W25QXX_ReadSR(uint8_t regno)   
{  
	uint8_t byte=0,command=0; 
    switch(regno)
    {
        case 1:
            command=W25X_ReadStatusReg1;    //读状态寄存器1指令
            break;
        case 2:
            command=W25X_ReadStatusReg2;    //读状态寄存器2指令
            break;
        case 3:
            command=W25X_ReadStatusReg3;    //读状态寄存器3指令
            break;
        default:
            command=W25X_ReadStatusReg1;    
            break;
    }    
	digitalWrite(W25QXX_CS_PIN, LOW);                            //使能器件   
	spi3.transfer(command);            //发送读取状态寄存器命令    
	byte=spi3.transfer(0Xff);          //读取一个字节  
	digitalWrite(W25QXX_CS_PIN, HIGH);                            //取消片选     
	return byte;   
}

void W25QXX_Write_SR(uint8_t regno,uint8_t sr)   
{   
    uint8_t command=0;
    switch(regno)
    {
        case 1:
            command=W25X_WriteStatusReg1;    //写状态寄存器1指令
            break;
        case 2:
            command=W25X_WriteStatusReg2;    //写状态寄存器2指令
            break;
        case 3:
            command=W25X_WriteStatusReg3;    //写状态寄存器3指令
            break;
        default:
            command=W25X_WriteStatusReg1;    
            break;
    }   
	digitalWrite(W25QXX_CS_PIN, LOW);                            //使能器件   
	spi3.transfer(command);            //发送写取状态寄存器命令    
	spi3.transfer(sr);                 //写入一个字节  
	digitalWrite(W25QXX_CS_PIN, HIGH);                            //取消片选     	      
}

void W25QXX_Write_Enable(void)   
{
	digitalWrite(W25QXX_CS_PIN, LOW);                            //使能器件   
    spi3.transfer(W25X_WriteEnable);   //发送写使能  
	digitalWrite(W25QXX_CS_PIN, HIGH);                            //取消片选     	      
}

void W25QXX_Write_Disable(void)   
{  
	digitalWrite(W25QXX_CS_PIN, LOW);                            //使能器件   
    spi3.transfer(W25X_WriteDisable);  //发送写禁止指令    
	digitalWrite(W25QXX_CS_PIN, HIGH);                            //取消片选     	      
}

void W25QXX_Read(uint8_t* pBuffer,uint32_t ReadAddr,uint16_t NumByteToRead)   
{ 
	#if (_W25QXX_DEBUG==1)
	uint32_t	StartTime=HAL_GetTick();
	Serial.printf("w25qxx ReadByte at address %d begin...\r\n",ReadAddr);
	#endif
 	uint16_t i;   										    
	digitalWrite(W25QXX_CS_PIN, LOW);                            //使能器件   
    spi3.transfer(W25X_ReadData);      //发送读取命令  
    if(w25qxx.ID >= W25Q256)                //如果是W25Q256的话地址为4字节的，要发送最高8位
    {
        spi3.transfer((uint8_t)((ReadAddr)>>24));    
    }
    spi3.transfer((uint8_t)((ReadAddr)>>16));   //发送24bit地址    
    spi3.transfer((uint8_t)((ReadAddr)>>8));   
    spi3.transfer((uint8_t)ReadAddr);   
    for(i=0;i<NumByteToRead;i++)
	{ 
        pBuffer[i]=spi3.transfer(0XFF);    //循环读数  
    }
	digitalWrite(W25QXX_CS_PIN, HIGH); 				    	      
    #if (_W25QXX_DEBUG==1)
	Serial.printf("w25qxx ReadByte 0x%02X done after %d ms\r\n",*pBuffer,HAL_GetTick()-StartTime);
	#endif
}

void W25QXX_Write_Page(uint8_t* pBuffer,uint32_t WriteAddr,uint16_t NumByteToWrite)
{
 	uint16_t i;  
    W25QXX_Write_Enable();                  //SET WEL 
	digitalWrite(W25QXX_CS_PIN, LOW);                            //使能器件   
    spi3.transfer(W25X_PageProgram);   //发送写页命令   
    if(w25qxx.ID >= W25Q256)                //如果是W25Q256的话地址为4字节的，要发送最高8位
    {
        spi3.transfer((uint8_t)((WriteAddr)>>24)); 
    }
    spi3.transfer((uint8_t)((WriteAddr)>>16)); //发送24bit地址    
    spi3.transfer((uint8_t)((WriteAddr)>>8));   
    spi3.transfer((uint8_t)WriteAddr);   
    for(i=0;i<NumByteToWrite;i++)spi3.transfer(pBuffer[i]);//循环写数  
	digitalWrite(W25QXX_CS_PIN, HIGH);                            //取消片选 
	W25QXX_Wait_Busy();					   //等待写入结束
}

void W25QXX_Erase_Chip(void)   
{     
    W25QXX_Write_Enable();                  //SET WEL 
    W25QXX_Wait_Busy();   
  	digitalWrite(W25QXX_CS_PIN, LOW);                            //使能器件   
    spi3.transfer(W25X_ChipErase);        //发送片擦除命令  
	digitalWrite(W25QXX_CS_PIN, HIGH);                            //取消片选     	      
	W25QXX_Wait_Busy();   				   //等待芯片擦除结束
}

void W25QXX_Erase_Sector(uint32_t Dst_Addr)   
{  
	//监视falsh擦除情况,测试用   
 	//Serial.printf("fe:%x\r\n",Dst_Addr);	  
 	Dst_Addr*=4096;
    W25QXX_Write_Enable();                  //SET WEL 	 
    W25QXX_Wait_Busy();   
  	digitalWrite(W25QXX_CS_PIN, LOW);                            //使能器件   
    spi3.transfer(W25X_SectorErase);   //发送扇区擦除指令 
    if(w25qxx.ID >= W25Q256)                //如果是W25Q256的话地址为4字节的，要发送最高8位
    {
        spi3.transfer((uint8_t)((Dst_Addr)>>24)); 
    }
    spi3.transfer((uint8_t)((Dst_Addr)>>16));  //发送24bit地址    
    spi3.transfer((uint8_t)((Dst_Addr)>>8));   
    spi3.transfer((uint8_t)Dst_Addr);  
	digitalWrite(W25QXX_CS_PIN, HIGH);                           //取消片选     	      
    W25QXX_Wait_Busy();   				    //等待擦除完成
}

void W25QXX_PowerDown(void)   
{ 
  	digitalWrite(W25QXX_CS_PIN, LOW);                           //使能器件   
    spi3.transfer(W25X_PowerDown);     //发送掉电命令  
	digitalWrite(W25QXX_CS_PIN, HIGH);                            //取消片选     	      
    HAL_Delay(1);                            //等待TPD  
}

void W25QXX_WAKEUP(void)   
{  
  	digitalWrite(W25QXX_CS_PIN, LOW);                                //使能器件   
    spi3.transfer(W25X_ReleasePowerDown);  //  send W25X_PowerDown command 0xAB    
	digitalWrite(W25QXX_CS_PIN, HIGH);                                //取消片选     	      
    HAL_Delay(1);                                //等待TRES1
}
